change create to upsert
