# server/src/portfolios/dto/upsert-portfolio.dto.ts
@@ -1,0 +1,12 @@
+import { PortfolioEntity } from '../entities/portfolio.entity'
+import { PickType } from '@nestjs/swagger'
+
+export class PortfolioForUpsert extends PickType(PortfolioEntity, [
+  'id',
+  'name',
+  'url',
+]) {}
+
+export class UpsertPortfolioDto {
+  portfolios: PortfolioForUpsert[]
+}
